# IGLAEUIL

./: README.md  descriptions.txt  jmFramework.py  jmFramework.py~  jmRun.py  main.cpp  package.xml  pc.cpp  run.py  run.py~
jm/: CMakeLists.txt  package.xml
jm/src/: bck-pc.cpp  clust.cpp  cluster.cpp  cluster.h  extraction.cpp  jm.model  jmModel.arff  lang.cpp  model.cpp  model.h  pc.cpp  pcd.cpp  pixelchange.cpp  save.cpp  seg.cpp  test.arff  trainArff.txt  vision.cpp  vision.h
jm/src/RAKE/: rake.py  test.cpp
libfreenect2-master/examples/: Protonect.cpp
libfreenect2-master/include/libfreenect2/: frame_listener.hpp  frame_listener_impl.h
pclLib/: CMakeLists.txt  colorBasedSegmentation.cpp  convexHull.cpp  minCutSegmentation.cpp  unpackRGB.txt
pclLib/src/: pointCloudToCluster.cpp
pylibfreenect2-master/examples/: multiframe_listener.py
